# GitProject-Analyzer

./: .gitignore  ANNA_SETUP.md  README.md  analyzer.py  app.json  manifest.json  package.json  runner.bat
.anna/: dev-app.json
.github/workflows/: build-executa-binary.yml
bundle/: anna-tool-ids.js  app.js  index.html  style.css
executas/github-fetcher/: executa.json  github_fetcher.py  package_binary.sh  pyproject.toml  run_local.py
executas/github-fetcher/.anna/: dev-executa.json
