[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tool-orailkane-github-fetcher-khq97duy"
version = "0.1.0"
description = "Fetches github data for GitProject Analyzer"
requires-python = ">=3.11"
dependencies = [
    "requests",
]

[tool.hatch.build.targets.wheel]
packages = ["github_fetcher.py"]

[project.scripts]
"tool-orailkane-github-fetcher-khq97duy" = "github_fetcher:main"
